[Chromium] Layout Test webaudio/audiobuffersource-channels.html is failing https://bugs.webkit.org/show_bug.cgi?id=79765

Patch by Wei James <james.wei@intel.com> on 2012-03-02
Reviewed by Chris Rogers.

Source/WebCore:

* webaudio/AudioBuffer.cpp:
(WebCore::AudioBuffer::create):
* webaudio/AudioBufferSourceNode.cpp:
(WebCore::AudioBufferSourceNode::setBuffer):
* webaudio/AudioContext.h:
(WebCore):
(AudioContext):
(WebCore::AudioContext::maxNumberOfChannels):
* webaudio/AudioNodeOutput.cpp:
(WebCore::AudioNodeOutput::AudioNodeOutput):
(WebCore::AudioNodeOutput::setNumberOfChannels):

LayoutTests:

* platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/97208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109532 268f45cc-cd09-0410-ab3c-d52691b4dbfc