Source/WebCore/webaudio/AudioBuffer.cpp
@@ -33,6 +33,7 @@
 #include "AudioBuffer.h"
 
 #include "AudioBus.h"
+#include "AudioContext.h"
 #include "AudioFileReader.h"
 #include "ExceptionCode.h"
 #include <wtf/OwnPtr.h>
@@ -41,7 +42,7 @@ namespace WebCore {
 
 PassRefPtr<AudioBuffer> AudioBuffer::create(unsigned numberOfChannels, size_t numberOfFrames, float sampleRate)
 {
-    if (sampleRate < 22050 || sampleRate > 96000 || numberOfChannels > 10 || !numberOfFrames)
+    if (sampleRate < 22050 || sampleRate > 96000 || numberOfChannels > AudioContext::maxNumberOfChannels() || !numberOfFrames)
         return 0;
     
     return adoptRef(new AudioBuffer(numberOfChannels, numberOfFrames, sampleRate));
