Source/WebCore/webaudio/AudioContext.h
@@ -172,6 +172,9 @@ public:
     // Returns true if this thread owns the context's lock.
     bool isGraphOwner() const;
 
+    // Returns the maximum numuber of channels we can support.
+    static unsigned maxNumberOfChannels() { return MaxNumberOfChannels;}
+
     class AutoLocker {
     public:
         AutoLocker(AudioContext* context)
@@ -303,6 +306,11 @@ private:
     bool m_isOfflineContext;
 
     AsyncAudioDecoder m_audioDecoder;
+
+    // This is considering 32 is large enough for multiple channels audio. 
+    // It is somewhat arbitrary and could be increased if necessary.
+    enum { MaxNumberOfChannels = 32 };
+
 };
 
 } // WebCore
